k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: expensetracker
spec:
  selector:
    app: server
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
